[build-system]
requires      = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name        = 'selfdrive'
description = "Autonomy Lab's monorepo"
version     = '0.0.0'

authors = [
	{name = 'Autonomy Lab'},
]
license = {'text' = 'GPL-3.0-only'}

requires-python = '>=3.12'
dependencies = [
	'black',
	'can-isotp',
	'cantools',
	'invoke',
	'matplotlib',
	'mdformat-gfm',
	'opencan-cand',
	'pip-tools',
	'platformio',
	'pre-commit',
	'ruff',
	'scons',
	'strictyaml',
	'toml-sort',
	'tqdm',
	'yamlfix',
	'yamllint',
]

[project.urls]
repo = 'https://github.com/CooperUnion/selfdrive'

[tool.black]
line-length               = 79
skip-string-normalization = true

[tool.pip-tools]
allow-unsafe    = true
generate-hashes = true
strip-extras    = false
upgrade         = true
verbose         = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint.isort]
force-single-line = true

[tool.setuptools.packages.find]
exclude = ['*']

[tool.yamlfix]
exclude              = ['common/cantools/**/*.yml']
none_representation  = '~'
section_whitelines   = 1
sequence_style       = 'block_style'
whitelines           = 1
