<?xml version="1.0"?>
<package>
  <name>yostlab_imu</name>
  <version>0.0.0</version>
  <description>The Yostlab IMU driver package</description>
  <maintainer email="cagatay@robostate.com">cagatay</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>serial</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>serial</run_depend>
  <export>
  </export>
</package>
