<?xml version="1.0"?>
<package>
  <name>yostlab_imu</name>
  <version>0.0.0</version>
  <description>The Yostlab IMU driver package</description>
  <maintainer email="cagatay@robostate.com">cagatay</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>serial</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>rclcpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>serial</run_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <!-- <build_depend>rospy</build_depend> -->
  <!-- <run_depend>rospy</run_depend> -->
  <!-- <export>
  </export> -->
</package>
