<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dist_to_obj_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="isaiah.rivera@cooper.edu">Isaiah Rivera</maintainer>
  <license>Apache-2.0</license>
  <!-- <exec_depend>yolo_interfaces</exec_depend> -->


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
