<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pico_bridge</name>
  <version>0.0.0</version>
  <description>bridge to the Pico!</description>
  <maintainer email="catherine.vanwest@cooper.edu">Catherine Van West</maintainer>
  <license>GPLv3 or later</license>

  <depend>carrie_interfaces</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
